--- a/src/Starbender.RecipeApp/Components/Pages/Home.razor
+++ b/src/Starbender.RecipeApp/Components/Pages/Home.razor
@@ -7,9 +7,7 @@
 @inject IRecipeAppService RecipeService
 @inject NavigationManager NavigationManager
 
-<PageTitle>Recipes</PageTitle>
-<MudContainer MaxWidth="MaxWidth.Medium" Class="py-6">
-    <MudText Typo="Typo.h4" Class="mb-4">Recipes</MudText>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="py-2 w-100">
 
     @if (_isLoading)
     {
