--- a/src/Starbender.RecipeApp.Blazor/Components/Button/CreateRecipeButton.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/Button/CreateRecipeButton.razor
@@ -1,16 +1,34 @@
 ﻿@inherits RecipeComponentBase
 
-<MudButton 
-    Variant="Variant.Filled" 
-    Color="Color.Primary"
-    OnClick="OnClick"
-    Disabled="@_isBusy">
-    @(_isBusy ? "Creating..." : "Create")
-</MudButton>
+@if (ShowText)
+{
+    <MudButton 
+        Variant="Variant.Filled" 
+        Color="Color.Success"
+        OnClick="OnClick"
+        EndIcon=@(Icon)
+        IconSize="@Size.Small"
+        Size="Size.Small"
+        Disabled="@_isBusy"> 
+            @(_isBusy ? "Creating..." : "Create")
+        </MudButton>
+}
+else
+{
+    <MudIconButton 
+        Variant="Variant.Filled"
+        Color="Color.Success"
+        OnClick="OnClick"
+        Size="@Size.Small"
+        Icon=@(Icon ?? Icons.Material.Outlined.Add)
+        Disabled="@_isBusy" />
+}
 
 @code {
     [Inject] IDialogService DialogService { get; set; } = default!;
     [Parameter] public EventCallback<RecipeDto> HandleDialogSavedAsync { get; set; }
+    [Parameter] public bool ShowText { get; set; } = false;
+    [Parameter] public string Icon { get; set; } = Icons.Material.Outlined.Add;
 
     private bool _isBusy;
 
