--- a/src/Starbender.RecipeApp.Blazor/Components/RecipeEditor.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/RecipeEditor.razor
@@ -4,48 +4,58 @@
     <MudForm Model="_recipeModel" @ref="_form">
         <MudStack>
             <MudStack Row>
-            <RecipeImage IsEditable="true"
-                         Width="150"
-                         Height="150"
-                         RecipeId="@_recipeModel.Id"
-                         BlobIdChanged="HandleBlobIdChangedAsync" />
-                <MudStack>
-                    <MudTextField T="string"
-                          Label="Title"
-                          Variant="Variant.Outlined"
-                          Margin="Margin.Dense"
-                          For="@(() => _recipeModel.Title)"
-                          @bind-Value="_recipeModel.Title"
-                          Required="true"
-                          RequiredError="Title is required." />
 
-                <MudTextField T="string"
-                              Label="Description"
-                              Variant="Variant.Outlined"
-                              Margin="Margin.Dense"
-                              For="@(() => _recipeModel.Description)"
-                              @bind-Value="_recipeModel.Description"
-                              Lines="3"
-                              Required="true"
-                              RequiredError="Description is required." />
+            <RecipeImage 
+                IsEditable="true"
+                Width="150"
+                Height="150"
+                RecipeId="@_recipeModel.Id"
+                BlobIdChanged="HandleBlobIdChangedAsync" />
+                
+                <MudStack Style="width: 100%;">
+                    <MudTextField 
+                        T="string"
+                        Label="Title"
+                        Variant="Variant.Outlined"
+                        Margin="Margin.Dense"
+                        Style="width: 100%;"
+                        For="@(() => _recipeModel.Title)"
+                        @bind-Value="_recipeModel.Title"
+                        Required="true"
+                        RequiredError="Title is required." />
+
+                    <MudTextField 
+                        T="string"
+                        Label="Description"
+                        Variant="Variant.Outlined"
+                        Margin="Margin.Dense"
+                        Style="width: 100%;" 
+                        For="@(() => _recipeModel.Description)"
+                        @bind-Value="_recipeModel.Description"
+                        Lines="3"
+                        Required="true"
+                        RequiredError="Description is required." />
+
                 </MudStack>
             </MudStack>
-            <MudTextField T="string"
-                          Label="Instructions"
-                          Variant="Variant.Outlined"
-                          Margin="Margin.Dense"
-                          For="@(() => _recipeModel.Instructions)"
-                          @bind-Value="_recipeModel.Instructions"
-                          Lines="6" />
 
-            <RecipeIngredients Recipe="_recipeModel" RecipeChanged="HandleIngredientsChangedAsync" IsEditable="true" />
+            <RecipeIngredients 
+                Recipe="_recipeModel" 
+                RecipeChanged="HandleIngredientsChangedAsync" 
+                IsEditable="true" />
+
+            <MudTextField
+                T="string"
+                Label="Instructions"
+                Variant="Variant.Outlined"
+                Margin="Margin.Dense"
+                For="@(() => _recipeModel.Instructions)"
+                @bind-Value="_recipeModel.Instructions"
+                Lines="6" />
 
             <MudStack Row="true" Spacing="2" Class="mt-4">
                 <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="HandleSubmitAsync">
                     Save
-                </MudButton>
-                <MudButton Color="Color.Default" Variant="Variant.Outlined" OnClick="OnCancel">
-                    Cancel
                 </MudButton>
             </MudStack>
         </MudStack>
